syntax = "proto3";

package email;

option java_package = "com.teamsolution.lab.grpc.email";
option java_multiple_files = true;

service EmailService {
    rpc SendEmail(EmailRequest) returns (EmailResponse);
}

message EmailRequest {
    string to = 1;
    string subject = 2;
    string body = 3;
}

message EmailResponse {
    bool success = 1;
    string message = 2;
}